--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-    padding: 5rem 0;
+    padding: 2rem 0;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -60,7 +60,7 @@
 }
 
 .description {
-    line-height: 1.5;
+    line-height: 0.5;
     font-size: 1.5rem;
 }
 
@@ -70,17 +70,50 @@
     justify-content: center;
     flex-wrap: wrap;
     max-width: 800px;
-    margin-top: 3rem;
+    margin-top: 1rem;
+}
+
+.img {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    flex-basis: 75%;
+    border-radius: 20px;
+    transition: color 0.15s ease;
+}
+
+.buttom {
+    padding: 1rem;
+    background-color: white;
+    color: rgb(51, 99, 0);
+    border: solid rgb(112, 198, 20);
+    border-radius: 12px;
+    width: 50%;
+    color: rgb(112, 198, 20);
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    max-width: 800px;
+    margin-top: 0.5rem;
+    transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.buttom:hover,
+.buttom:focus,
+.buttom:active {
+    color: #fff;
+    border-color: #000;
 }
 
 .card {
     margin: 1rem;
     flex-basis: 45%;
-    padding: 1.5rem;
+    padding: 1rem;
     text-align: left;
     color: inherit;
     text-decoration: none;
-    border: 1px solid #eaeaea;
+    border: 5px solid #eaeaea;
     border-radius: 10px;
     transition: color 0.15s ease, border-color 0.15s ease;
 }
@@ -89,7 +122,7 @@
 .card:focus,
 .card:active {
     color: rgb(112, 198, 20);
-    border-color: rgb(112, 198, 20)
+    border-color: rgb(112, 198, 20);
 }
 
 .card h3 {
