--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,148 +1,128 @@
-.container {
-    min-height: 100vh;
-    padding: 0 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.main {
-    padding: 2rem 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer {
-    width: 100%;
-    height: 100px;
-    border-top: 1px solid #eaeaea;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer img {
-    margin-left: 0.5rem;
-}
-
-.footer a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.title a {
-    color: rgb(112, 198, 20);
-    text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-    text-decoration: underline;
-    text-decoration: none;
-}
-
-.title {
-    margin: 0;
-    line-height: 1.15;
-    font-size: 4rem;
-    text-decoration: none;
-}
-
-.title,
-.description {
-    text-align: center;
-}
-
-.description {
-    line-height: 0.5;
-    font-size: 1.5rem;
-}
-
-.grid {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 800px;
-    margin-top: 1rem;
-}
-
-.img {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0.5rem;
-    flex-basis: 75%;
-    border-radius: 20px;
-    transition: color 0.15s ease;
-}
-
-.buttom {
-    padding: 1rem;
-    background-color: white;
-    color: rgb(51, 99, 0);
-    border: solid rgb(112, 198, 20);
-    border-radius: 12px;
-    width: 50%;
-    color: rgb(112, 198, 20);
-    display: block;
-    text-decoration: none;
-    text-transform: uppercase;
-    max-width: 800px;
-    margin-top: 0.5rem;
-    transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.buttom:hover,
-.buttom:focus,
-.buttom:active {
-    color: #fff;
-    border-color: #000;
-}
-
-.card {
-    margin: 1rem;
-    flex-basis: 45%;
-    padding: 1rem;
-    text-align: left;
-    color: inherit;
-    text-decoration: none;
-    border: 5px solid #eaeaea;
-    border-radius: 10px;
-    transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-    color: rgb(112, 198, 20);
-    border-color: rgb(112, 198, 20);
-}
-
-.card h3 {
-    margin: 0 0 1rem 0;
-    font-size: 1.5rem;
-}
-
-.card p {
-    margin: 0;
-    font-size: 1.25rem;
-    line-height: 1.5;
-}
-
-.logo {
-    height: 1em;
-}
-
-@media (max-width: 600px) {
-    .grid {
-        width: 100%;
+    .container {
+        min-height: 100vh;
+        padding: 0 0.5rem;
+        display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-}
+    
+    .main {
+        padding: 2rem 0;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .footer {
+        width: 100%;
+        height: 100px;
+        border-top: 3px solid #acabab;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .footer a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .title a {
+        color: rgb(112, 198, 20);
+        text-decoration: none;
+    }
+    
+    .title a:hover,
+    .title a:focus,
+    .title a:active {
+        text-decoration: underline;
+        text-decoration: none;
+    }
+    
+    .title {
+        margin: 0;
+        line-height: 1.15;
+        font-size: 4rem;
+        text-decoration: none;
+    }
+    
+    .title,
+    .description {
+        text-align: center;
+    }
+    
+    .description {
+        line-height: 0.5;
+        font-size: 1.5rem;
+    }
+    
+    .grid {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        max-width: 800px;
+        margin-top: 1rem;
+    }
+    
+    .img {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 0.5rem;
+        flex-basis: 75%;
+        border-radius: 20px;
+        transition: color 0.15s ease;
+    }
+    
+    .button {
+        margin: 0.5rem;
+        max-width: 1000px;
+        padding: 0.5rem;
+        text-align: center;
+        text-decoration: none;
+        border: 3px solid #eaeaea;
+        border-radius: 10px;
+        transition: color 0.15s ease, border-color 0.15s ease;
+    }
+    
+    .card {
+        margin: 0.5rem;
+        flex-basis: 45%;
+        padding: 0.5rem;
+        text-align: center;
+        color: inherit;
+        text-decoration: none;
+        border: 3px solid #eaeaea;
+        border-radius: 20px;
+        transition: color 0.15s ease, border-color 0.15s ease;
+    }
+    
+    .card:hover,
+    .card:focus,
+    .card:active {
+        color: rgb(112, 198, 20);
+        border-color: rgb(112, 198, 20);
+    }
+    
+    .card h3 {
+        margin: 0 0 1rem 0;
+        font-size: 1.5rem;
+    }
+    
+    .card p {
+        margin: 0;
+        font-size: 1.25rem;
+        line-height: 1.5;
+    }
+    
+    @media (max-width: 600px) {
+        .grid {
+            width: 100%;
+            flex-direction: column;
+        }
+    }
