--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -80,14 +80,28 @@
     }
     
     .button {
-        margin: 0.5rem;
-        max-width: 1000px;
-        padding: 0.5rem;
+        max-width: 100%;
+        padding: 0.3rem;
         text-align: center;
         text-decoration: none;
-        border: 3px solid #eaeaea;
-        border-radius: 10px;
+        border: 5px solid rgb(112, 198, 20);
+        border-radius: 20px;
         transition: color 0.15s ease, border-color 0.15s ease;
+    }
+    
+    .button a {
+        color: rgb(112, 198, 20);
+        text-decoration: none;
+    }
+    
+    .button a:hover {
+        color: #eaeaea;
+    }
+    
+    .button a:focus,
+    .button a:active {
+        text-decoration: underline;
+        text-decoration: none;
     }
     
     .card {
